--- a/.github/workflows/get_internal_dns_records.yaml
+++ b/.github/workflows/get_internal_dns_records.yaml
@@ -11,7 +11,7 @@ env:
   TS_API_KEY: "${{ secrets.TS_API_KEY }}"
 #------------------------------------------------------------------------------------#
 jobs:
-  DDNS:
+  TailScale:
     runs-on: ubuntu-latest
     #timeout-minutes: 45 # Can't afford to finish the 2000 Minutes quotes    
     permissions:
@@ -68,6 +68,80 @@ jobs:
           #Write
           echo "[+] Internal IP: $(cat /tmp/tailscale_ddns_internal.txt)"
           cat "/tmp/tailscale_ddns_internal.txt" > "$GITHUB_WORKSPACE/main/DNS/A/internal/jellyfin-music.txt"
+        continue-on-error: true
+
+      - name: Get DateTime
+        run: |
+          # Date Time
+          NEPALI_TIME=$(TZ='Asia/Kathmandu' date +'%Y-%m-%d (%I:%M:%S %p)')
+          echo "NEPALI_TIME=$NEPALI_TIME" >> $GITHUB_ENV
+          
+      - name: Git Pull
+        run: |
+           cd "$GITHUB_WORKSPACE/main" && git pull origin main
+        continue-on-error: true
+        
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          repository: ./main        
+          commit_user_name: Azathothas # defaults to "github-actions[bot]"
+          commit_user_email: AjamX101@gmail.com # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
+          commit_message: "✅ ⏫ Updated 🔏 Internal DNS 🌐 Records 🔰 <-- ${{ env.NEPALI_TIME }} ⌚"
+          push_options: '--force'
+#------------------------------------------------------------------------------------#
+  goDNS:
+    runs-on: ubuntu-latest
+    needs: [TailScale]
+    #timeout-minutes: 45 # Can't afford to finish the 2000 Minutes quotes    
+    permissions:
+      contents: write
+      
+    steps:        
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          path: main  
+
+      - name: Install Coreutils
+        run: |
+          # Presets
+          set -x ; set +e
+          #--------------#
+          sudo apt update -y
+          sudo apt install coreutils curl dos2unix jq moreutils wget -y
+          # Again just because
+          sudo apt install coreutils curl dos2unix jq moreutils wget -y
+        continue-on-error: true
+
+      - name: Install eget
+        run: |
+          # Presets
+          set -x ; set +e
+          #--------------#
+          # eget for bins
+          sudo wget "https://raw.githubusercontent.com/Azathothas/Toolpacks/main/x86_64/eget" -O "/usr/local/bin/eget"
+          sudo chmod +xwr "/usr/local/bin/eget"
+        continue-on-error: false
+
+      - name: Install Deps
+        run: |
+          # Presets
+          set -x ; set +e
+          #godns
+          sudo eget "TimothyYe/godns" --asset "linux_amd64.tar.gz" --to "/usr/local/bin/godns"
+
+      - name: Update "jellyfin-music.${{ env.DOMAIN_NAME }}:8096"
+        env:
+          DEVICE_HOSTNAME: "segfault-8lgm-defyeasy"
+          #If there are multiple internal address, then supply a prefix eg. "192" to only match 192.X*. Leave empty if not needed
+          CUSTOM_PREFIX: ""
+        run: |
+          # Presets
+          set -x ; set +e
+          #GetConfig
+          echo "${{ secrets.CF_JELLYFIN_MUSIC_GODNS }}" > "$HOME/godns_config.json"
+          #Run
+          timeout 120 godns -c "$HOME/godns_config.json"
         continue-on-error: true
 
       - name: Get DateTime
