--- a/.github/workflows/server_ssh_pinger.yaml
+++ b/.github/workflows/server_ssh_pinger.yaml
@@ -10,8 +10,29 @@ jobs:
     #timeout-minutes: 05
     permissions:
       contents: write
-      
-    steps:        
+    steps:
+    
+      - name: Install Coreutils
+        run: |
+          # Presets
+          set -x ; set +e
+          #--------------#
+          sudo apt update -y
+          sudo apt install coreutils curl dos2unix jq moreutils wget -y
+          # Again just because
+          sudo apt install coreutils curl dos2unix jq moreutils wget -y
+        continue-on-error: true
+
+      - name: Install eget
+        run: |
+          # Presets
+          set -x ; set +e
+          #--------------#
+          # eget for bins
+          sudo wget "https://raw.githubusercontent.com/Azathothas/Toolpacks/main/x86_64/eget" -O "/usr/local/bin/eget"
+          sudo chmod +xwr "/usr/local/bin/eget"
+        continue-on-error: false
+     
       - name: 🖳🇨🇭 Ping SF Hosts 🔒🔑
         run: |
           # Presets
