--- a/.github/workflows/check_status_router_main.yaml
+++ b/.github/workflows/check_status_router_main.yaml
@@ -2,8 +2,8 @@ name: 🖳🇨🇭 🤖 Router Pinger 🌐
 #DEPENDS ON: WL_RCHECK as Repo Secret
 on:
   workflow_dispatch: # Whenever manually run from actions-tab
-  schedule:
-    - cron: "*/15 * * * *"  # Every 15 Mins
+#  schedule:
+#    - cron: "*/15 * * * *"  # Every 15 Mins
 #------------------------------------------------------------------------------------# 
 # env:
 #   #GITHUB_WORKSPACE: "${{ env.GITHUB_WORKSPACE }}"
