--- a/.github/workflows/get_internal_dns_records.yaml
+++ b/.github/workflows/get_internal_dns_records.yaml
@@ -3,8 +3,8 @@ name: ⏫ Update 🔏 Internal DNS 🌐 Records 🔰
 #MAX_RUNTIME: 01-05 Mins
 on:
   workflow_dispatch: # Whenever manually run from actions-tab
-  schedule:
-    - cron: "0 */1 * * *"  # Every 1 Hr
+  #schedule:
+  #  - cron: "0 */1 * * *"  # Every 1 Hr
 #------------------------------------------------------------------------------------#  
 env:
   #GITHUB_WORKSPACE: "${{ env.GITHUB_WORKSPACE }}"
